--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,170 +29,200 @@
     </nav>
   </header>
   <main class="page-catalog">
-    <div class="page-catalog__wrapper">
-      <h1 class="page-catalog__title">Каталог продукции</h1>
-      <div class="page-catalog__product-container">
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/chicken-500.png" width="68" height="86" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy PRO 500 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">500г</p>
+    <div class="page-catalog-wrapper">
+      <h1 class="page-catalog__page-title">Каталог продукции</h1>
+      <div class="product-container">
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/chicken-500.png" width="68" height="86" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy PRO 500 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">500г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">курица</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">курица</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">700Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">700Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/chicken-1000.png" width="84" height="101" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy PRO 1000 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">1000г</p>
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/chicken-1000.png" width="84" height="101" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy PRO 1000 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">1000г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">курица</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">курица</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">1000Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">1000Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/fish-500.png" width="68" height="78" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy PRO 500 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">500г</p>
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/fish-500.png" width="68" height="78" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy PRO 500 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">500г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">рыба</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">рыба</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">700Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">700Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/fish-1000.png" width="84" height="101" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy PRO 1000 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">1000г</p>
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/fish-1000.png" width="84" height="101" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy PRO 1000 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">1000г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">рыба</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">рыба</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">1000Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">1000Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/buckwheat-500.png" width="68" height="78" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy slim 500 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">500г</p>
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/buckwheat-500.png" width="68" height="78" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy slim 500 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">500г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">гречка</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">гречка</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">400Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">400Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/buckwheat-1000.png" width="72" height="101" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy slim 1000 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">1000г</p>
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/buckwheat-1000.png" width="72" height="101" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy slim 1000 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">1000г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">гречка</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">гречка</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">700Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">700Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
-        <div class="page-catalog__product-card">
-          <img class="page-catalog__product-image" src="img/catalog/rice-500.png" width="72" height="84" alt="фото товара.">
-          <h2 class="page-catalog__product-title">Cat Energy slim 500 г</h2>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-weight">Масса</p>
-            <p class="page-catalog__product-weight">500г</p>
+        <div class="product-card">
+          <a class="product-card__link" href="#">
+            <img class="product-card__image" src="img/catalog/rice-500.png" width="72" height="84" alt="фото товара.">
+          </a>
+          <a class="product-card__link" href="#">
+            <h2 class="product-card__title">Cat Energy slim 500 г</h2>
+          </a>
+          <div class="product-card__description">
+            <p class="product-card__weight">Масса</p>
+            <p class="product-card__weight">500г</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-taste">Вкус</p>
-            <p class="page-catalog__product-taste">рис</p>
+          <div class="product-card__description">
+            <p class="product-card__taste">Вкус</p>
+            <p class="product-card__taste">рис</p>
           </div>
-          <div class="page-catalog__product-discription">
-            <p class="page-catalog__product-price">Цена</p>
-            <p class="page-catalog__product-price">500Р</p>
+          <div class="product-card__description">
+            <p class="product-card__price">Цена</p>
+            <p class="product-card__price">500Р</p>
           </div>
-          <button class="page-catalog__product-button" type="button">заказать</button>
+          <button class="product-card__button" type="button">заказать</button>
         </div>
         <div class="page-catalog__show-all">
-          <h2 class="page-catalog__title">Показать еще 100500 товаров</h2>
+          <a class="product-card__link" href="#">
+            <h2 class="page-catalog__title">Показать еще 100500 товаров</h2>
+          </a>
           <p class="page-catalog__subtitle">На самом деле вкусов гораздо больше!</p>
           <button class="page-catalog__show-button" type="button">показать все</button>
         </div>
       </div>
-      <div class="page-catalog__additionally-wrapper">
-        <h2 class="page-catalog__additionally-title">Дополнительно</h2>
-        <div class="page-catalog__additionally-card">
-          <h2 class="page-catalog__additionally-card-title">Сахарозаменитель</h2>
-          <div class="page-catalog__additionally-discription">
-            <p class="page-catalog__additionally-amount">1 упаковка (100 г)</p>
-            <p class="page-catalog__additionally-price">200 Р.</p>
+      <div class="additionally-wrapper">
+        <h2 class="additionally-wrapper__title">Дополнительно</h2>
+        <div class="additionally-wrapper__card">
+          <h2 class="additionally-wrapper__card-title">Сахарозаменитель</h2>
+          <div class="additionally-wrapper__description">
+            <p class="additionally-wrapper__amount">1 упаковка (100 г)</p>
+            <p class="additionally-wrapper__price">200 Р.</p>
           </div>
-          <button class="page-catalog__additionally-button">заказать</button>
+          <button class="additionally-wrapper__button">заказать</button>
         </div>
-        <div class="page-catalog__additionally-card">
-          <h2 class="page-catalog__additionally-card-title">питьевая вода</h2>
-          <div class="page-catalog__additionally-discription">
-            <p class="page-catalog__additionally-amount">5 литров</p>
-            <p class="page-catalog__additionally-price">50 Р.</p>
+        <div class="additionally-wrapper__card">
+          <h2 class="additionally-wrapper__card-title">питьевая вода</h2>
+          <div class="additionally-wrapper__description">
+            <p class="additionally-wrapper__amount">5 литров</p>
+            <p class="additionally-wrapper__price">50 Р.</p>
           </div>
-          <button class="page-catalog__additionally-button">заказать</button>
+          <button class="additionally-wrapper__button">заказать</button>
         </div>
-        <div class="page-catalog__additionally-card">
-          <h2 class="page-catalog__additionally-card-title">молоко</h2>
-          <div class="page-catalog__additionally-discription">
-            <p class="page-catalog__additionally-amount">1 литр</p>
-            <p class="page-catalog__additionally-price">100 Р.</p>
+        <div class="additionally-wrapper__card">
+          <h2 class="additionally-wrapper__card-title">молоко</h2>
+          <div class="additionally-wrapper__description">
+            <p class="additionally-wrapper__amount">1 литр</p>
+            <p class="additionally-wrapper__price">100 Р.</p>
           </div>
-          <button class="page-catalog__additionally-button">заказать</button>
+          <button class="additionally-wrapper__button">заказать</button>
         </div>
-        <div class="page-catalog__additionally-card">
-          <h2 class="page-catalog__additionally-card-title">витамины</h2>
-          <div class="page-catalog__additionally-discription">
-            <p class="page-catalog__additionally-amount">1 упаковка (30 г)</p>
-            <p class="page-catalog__additionally-price">300 Р.</p>
+        <div class="additionally-wrapper__card">
+          <h2 class="additionally-wrapper__card-title">витамины</h2>
+          <div class="additionally-wrapper__description">
+            <p class="additionally-wrapper__amount">1 упаковка (30 г)</p>
+            <p class="additionally-wrapper__price">300 Р.</p>
           </div>
-          <button class="page-catalog__additionally-button">заказать</button>
+          <button class="additionally-wrapper__button">заказать</button>
         </div>
-        <div class="page-catalog__gift">
-          <p class="page-catalog__gift-description">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="gift">
+          <p class="gift-description">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </div>
