правки по замечаниям.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -222,7 +222,7 @@
           <button class="additionally-wrapper__button">заказать</button>
         </div>
         <div class="gift">
-          <p class="gift-description">Закажите все и получите чехол для кота в подарок!</p>
+          <p class="gift__description">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </div>
