--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,18 +40,18 @@
             <h2 class="product-card__title">Cat Energy PRO 500 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">500г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">500г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">курица</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">курица</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">700Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">700Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="product-card">
           <a class="product-card__link" href="#">
@@ -61,18 +61,18 @@
             <h2 class="product-card__title">Cat Energy PRO 1000 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">1000г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">1000г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">курица</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">курица</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">1000Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">1000Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="product-card">
           <a class="product-card__link" href="#">
@@ -82,18 +82,18 @@
             <h2 class="product-card__title">Cat Energy PRO 500 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">500г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">500г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">рыба</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">рыба</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">700Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">700Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="product-card">
           <a class="product-card__link" href="#">
@@ -103,18 +103,18 @@
             <h2 class="product-card__title">Cat Energy PRO 1000 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">1000г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">1000г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">рыба</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">рыба</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">1000Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">1000Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="product-card">
           <a class="product-card__link" href="#">
@@ -124,18 +124,18 @@
             <h2 class="product-card__title">Cat Energy slim 500 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">500г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">500г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">гречка</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">гречка</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">400Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">400Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="product-card">
           <a class="product-card__link" href="#">
@@ -145,18 +145,18 @@
             <h2 class="product-card__title">Cat Energy slim 1000 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">1000г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">1000г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">гречка</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">гречка</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">700Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">700Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="product-card">
           <a class="product-card__link" href="#">
@@ -166,25 +166,25 @@
             <h2 class="product-card__title">Cat Energy slim 500 г</h2>
           </a>
           <div class="product-card__description">
-            <p class="product-card__weight">Масса</p>
-            <p class="product-card__weight">500г</p>
+            <p class="product-card__specifications">Масса</p>
+            <p class="product-card__specifications">500г</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__taste">Вкус</p>
-            <p class="product-card__taste">рис</p>
+            <p class="product-card__specifications">Вкус</p>
+            <p class="product-card__specifications">рис</p>
           </div>
           <div class="product-card__description">
-            <p class="product-card__price">Цена</p>
-            <p class="product-card__price">500Р</p>
+            <p class="product-card__specifications">Цена</p>
+            <p class="product-card__specifications">500Р</p>
           </div>
-          <button class="product-card__button" type="button">заказать</button>
+          <a class="product-card__button" href="#">заказать</a>
         </div>
         <div class="page-catalog__show-all">
           <a class="product-card__link" href="#">
             <h2 class="page-catalog__title">Показать еще 100500 товаров</h2>
           </a>
           <p class="page-catalog__subtitle">На самом деле вкусов гораздо больше!</p>
-          <button class="page-catalog__show-button" type="button">показать все</button>
+          <a class="page-catalog__show-button" href="#">показать все</a>
         </div>
       </div>
       <div class="additionally-wrapper">
