правки по замечаниям

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="additionally-wrapper">
-        <h2 class="additionally-wrapper__title">Дополнительно</h2>
+        <h2 class="additionally-wrapper__title">Дополнительные товары</h2>
         <div class="additionally-wrapper__card">
           <h2 class="additionally-wrapper__card-title">Сахарозаменитель</h2>
           <div class="additionally-wrapper__description">
