--- a/source/index.html
+++ b/source/index.html
@@ -82,12 +82,12 @@
         <p class="main-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
         <div class="main-example__fieldset-wrapper">
           <fieldset class="main-example__fieldset">
-            <legend class="main-example__legend">Снижение веса</legend>
-            <p class="main-example__text">5кг</p>
+            <legend class="main-example__legend">cнижение веса</legend>
+            <p class="main-example__text">5 кг</p>
           </fieldset>
           <fieldset class="main-example__fieldset">
             <legend class="main-example__legend">затрачено времени</legend>
-            <p class="main-example__text">60дней</p>
+            <p class="main-example__text">60 дней</p>
           </fieldset>
         </div>
         <p class="main-example__expenses">Затраты на питание: 15 000 РУБ.</p>
