Адаптивные сетки и декоративные элементы главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -85,11 +85,11 @@
         <p class="main-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
         <div class="main-example__fieldset-wrapper">
           <div class="main-example__container">
-            <legend class="main-example__legend">cнижение веса</legend>
+            <span class="main-example__legend">cнижение веса</span>
             <p class="main-example__text">5 кг</p>
           </div>
           <div class="main-example__container">
-            <legend class="main-example__legend">затрачено времени</legend>
+            <span class="main-example__legend">затрачено времени</span>
             <p class="main-example__text">60 дней</p>
           </div>
           <div class="main-example__expenses-container">
