--- a/source/index.html
+++ b/source/index.html
@@ -82,50 +82,51 @@
     <section class="main-example">
       <h2 class="main-example__title">Живой пример</h2>
       <div class="main-example__wrapper">
-        <p class="main-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-        <div class="main-example__fieldset-wrapper">
-          <div class="main-example__container">
-            <span class="main-example__legend">cнижение веса</span>
-            <p class="main-example__text">5 кг</p>
-          </div>
-          <div class="main-example__container">
-            <span class="main-example__legend">затрачено времени</span>
-            <p class="main-example__text">60 дней</p>
-          </div>
-          <div class="main-example__expenses-container">
-            <p class="main-example__expenses">Затраты на питание:</p>
-            <p class="main-example__expenses">15 000 РУБ.</p>
+        <div class="main-example__description-wrapper">
+          <p class="main-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+          <div class="main-example__fieldset-wrapper">
+            <div class="main-example__container">
+              <span class="main-example__legend">cнижение веса</span>
+              <p class="main-example__text">5 кг</p>
+            </div>
+            <div class="main-example__container">
+              <span class="main-example__legend">затрачено времени</span>
+              <p class="main-example__text">60 дней</p>
+            </div>
+            <div class="main-example__expenses-container">
+              <p class="main-example__expenses">Затраты на питание:</p>
+              <p class="main-example__expenses">15 000 РУБ.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="main-example__range-wrapper">
-        <img class="main-example__range-image" src="img/fat-cat-mobile.png" width="280" height="232" alt="фото толстого кота.">
-        <div class="main-example__range-slider">
-          <button class="main-example__button">было</button>
-          <span class="visually-hidden">было</span>
-          <div class="main-example__range-scale">
-            <button class="main-example__range-button" type="button"></button>
-            <span class="visually-hidden">Изменить состояние</span>
+        <div class="main-example__range-wrapper">
+          <img class="main-example__range-image" src="img/fat-cat-mobile.png" width="280" height="232" alt="фото толстого кота.">
+          <div class="main-example__range-slider">
+            <button class="main-example__button">было</button>
+            <span class="visually-hidden">было</span>
+            <div class="main-example__range-scale">
+              <button class="main-example__range-button" type="button"></button>
+              <span class="visually-hidden">Изменить состояние</span>
+            </div>
+            <button class="main-example__button">стало</button>
+            <span class="visually-hidden">стало</span>
           </div>
-          <button class="main-example__button">стало</button>
-          <span class="visually-hidden">стало</span>
         </div>
       </div>
     </section>
-  </main>
-  <footer class="page-footer">
-    <div class="page-footer__location-wrapper">
-      <div class="page-footer__address">
-        <h2 class="page-footer__title">приглашаем<br> к сотрудничеству дилеров!</h2>
-        <div class="page-footer__text-container">
-          <p class="page-footer__text">ул. Большая Конюшенная, д. 19/8</p>
-          <p class="page-footer__text">Санкт-Петербург</p>
+    <section class="location">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <div class="location__address">
+        <h2 class="location__title">приглашаем<br> к сотрудничеству дилеров!</h2>
+        <div class="location__text-container">
+          <p class="location__text">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="location__text">Санкт-Петербург</p>
         </div>
       </div>
-      <div class="page-footer__map">
-        <img src="img/location-map.png" width="320" height="362" alt="распололжение на карте.">
-      </div>
-    </div>
+      <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="100%" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
+    </section>
+  </main>
+  <footer class="page-footer">
     <div class="page-footer__wrapper">
       <a class="page-footer__link">
       <img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="название сайта.">
