--- a/source/catalog.html
+++ b/source/catalog.html
@@ -239,7 +239,9 @@
           </li>
         </ul>
       <div class="additionally">
-        <h2 class="additionally__title">Дополнительные товары</h2>
+        <div class="additionally__title-wrapper">
+          <h2 class="additionally__title">Дополнительные товары</h2>
+        </div>
         <div class="additionally__wrapper">
           <ul class="additionally__list">
             <li class="additionally__card">
@@ -281,7 +283,7 @@
         </div>
       </div>
     </div>
-    <section class="location">
+    <section class="location location-inner">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <div class="location__address">
         <h2 class="location__title">приглашаем<br> к сотрудничеству дилеров!</h2>
