--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="manifest" href="favicon.webmanifest">
 </head>
 <body class="page__body">
   <header class="page-header page-header--nojs">
@@ -43,7 +47,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-500-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-500-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/chicken-500@2x.png">
+                    <img class="product-card__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy PRO 500 г</h2>
@@ -70,7 +81,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/chicken-1000.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-1000-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-1000-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/chicken-1000@2x.png">
+                    <img class="product-card__image" src="img/catalog/chicken-1000.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy PRO 1000 г</h2>
@@ -97,7 +115,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/fish-500.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-500-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-500-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/fish-500@2x.png">
+                    <img class="product-card__image" src="img/catalog/fish-500.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy PRO 500 г</h2>
@@ -124,7 +149,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/fish-1000.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-1000-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-1000-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/fish-1000@2x.png">
+                    <img class="product-card__image" src="img/catalog/fish-1000.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy PRO 1000 г</h2>
@@ -151,7 +183,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/buckwheat-500.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-500-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-500-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/buckwheat-500@2x.png">
+                    <img class="product-card__image" src="img/catalog/buckwheat-500.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy SLIM 500 г</h2>
@@ -178,7 +217,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/buckwheat-1000.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-1000-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-1000-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/buckwheat-1000@2x.png">
+                    <img class="product-card__image" src="img/catalog/buckwheat-1000.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy SLIM 1000 г</h2>
@@ -205,7 +251,14 @@
             <div class="product-card__wrapper">
               <div class="product-card">
                 <a href="" class="product-card__image-link">
-                  <img class="product-card__image" src="img/catalog/rice-500.png" width="140" height="112" alt="фото товара.">
+                  <picture>
+                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/rice-500-desktop@2x.png">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.png">
+                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/rice-500-tablet@2x.png">
+                    <source media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.png">
+                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/rice-500@2x.png">
+                    <img class="product-card__image" src="img/catalog/rice-500.png" width="140" height="112" alt="фото товара.">
+                  </picture>
                 </a>
                 <div class="product-card__info">
                   <h2 class="product-card__title">Cat Energy SLIM 500 г</h2>
@@ -285,11 +338,13 @@
     </div>
     <section class="location location-inner">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <div class="location__address">
-        <h2 class="location__title">приглашаем<br> к сотрудничеству дилеров!</h2>
-        <div class="location__text-container">
-          <p class="location__text">ул. Большая Конюшенная, д. 19/8</p>
-          <p class="location__text">Санкт-Петербург</p>
+      <div class="location__container">
+        <div class="location__address">
+          <h2 class="location__title">приглашаем<br> к сотрудничеству дилеров!</h2>
+          <div class="location__text-container">
+            <p class="location__text">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="location__text">Санкт-Петербург</p>
+          </div>
         </div>
       </div>
       <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
